--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -114,7 +114,7 @@
     "FLAVOR": "「 (尖)塔の階層を制したご褒美に、「英傑結晶」をあげちゃいます」-ソラス",
     "DESCRIPTIONS": [
       "戦闘勝利時に、 #b1 ポイント獲得する。 ",
-      "マップ画面（戦闘/イベント/キャンプ以外）で、 #b200 #Yゴールド と #b5 ポイントを持っている場合、このレリックを #y右クリック する と #yアンコモン #y英傑 カード #b1 枚を選んで加える。 すでの所持している同名カード(レア含む)は代わりにアップグレードする。",
+      "マップ画面（戦闘/イベント/キャンプ以外）で、 #b200 #yゴールド と #b5 ポイントを持っている場合、このレリックを #y右クリック する と #yアンコモン #y英傑 カード #b1 枚を選んで加える。 すでの所持している同名カード(レア含む)は代わりにアップグレードする。",
       "使うことができない…",
       "200ゴールドと5ポイントを消費してでデッキに加えるカードを選択。"
     ]
